<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/Title_Bar"
        android:paddingBottom="10dp"
        android:text="@string/fault_reporting_supply_label"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/Blue" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="2dp" >

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fault_reporting_supply_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/Blue" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="2dp" >

        <EditText
            android:id="@+id/etFaultTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="5dp"
            android:background="#262626"
            android:height="35dp"
            android:padding="2dp"
            android:textColor="#FFFFFF"
            android:textSize="20dp" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fault_reporting_supply_tank_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/Blue" />

        <EditText
            android:id="@+id/etTankName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="5dp"
            android:background="#262626"
            android:height="35dp"
            android:padding="2dp"
            android:textColor="#FFFFFF"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="2dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fault_reporting_supply_empid"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/Blue" />
    </LinearLayout>

    <EditText
        android:id="@+id/eEmpId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="5dp"
        android:background="#262626"
        android:height="35dp"
        android:padding="2dp"
        android:textColor="#FFFFFF"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="2dp" >

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fault_reporting_supply_description"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/Blue" />
    </LinearLayout>

    <EditText
        android:id="@+id/etDesc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="5dp"
        android:layout_weight="18"
        android:background="#262626"
        android:height="55dp"
        android:inputType="textMultiLine"
        android:padding="2dp"
        android:textColor="#FFFFFF"
        android:textSize="20dp" />

    <RelativeLayout
        android:id="@+id/button_panel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:paddingLeft="15dp" >

        <Button
            android:id="@+id/btReport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/custom_details_button_rs"
            android:padding="20sp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/bt_report"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textColor="#F7F7F7" />
    </RelativeLayout>

</LinearLayout>